removed several " " and empty strings/

--- a/PhoneStore/Views/Home/Index.cshtml
+++ b/PhoneStore/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PhoneStore.Models.Phone>
 @{
-    //ViewData["Title"] = "Список смартфонов";
-    //Layout = null;
+    ViewData["Title"] = "Список смартфонов";
+    Layout = "_Layout";
 }
 <!DOCTYPE html>
  
